# ChangeLog for media-sound/muine
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/muine/ChangeLog,v 1.42 2007/07/12 14:51:16 drac Exp $

  12 Jul 2007; Samuli Suominen <drac@gentoo.org>
  +files/muine-0.8.7-flac.patch, muine-0.8.7.ebuild:
  >=flac 1.1.3 compatibility patch from bug 181829.

  01 May 2007; Marius Mauch <genone@gentoo.org> muine-0.8.7.ebuild:
  Replacing einfo with elog

  08 Feb 2007; Peter Johanson <latexer@gentoo.org> -muine-0.8.6.ebuild:
  Remove old version that depends on the removed old dbus version.

*muine-0.8.7 (22 Jan 2007)

  22 Jan 2007; Luis Medinas <metalgod@gentoo.org> +muine-0.8.7.ebuild:
  Version Bump requested by Peter Johanson <latexer@gentoo.org>. This release
  uses the new managed dbus and various fixes and enhancements.

  10 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org> muine-0.8.6.ebuild:
  Fix up global vars, dbus-1.0 love, dependency updates

  10 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/muine-0.8.2-autoconf.diff, -files/muine-0.8.3-64-bit-int.diff,
  -files/muine-0.8.3-gtk-sharp-2.x.90-compat.diff,
  -files/muine-0.8.3-monodoc-update.diff, -muine-0.8.4.ebuild,
  -muine-0.8.5.ebuild:
  prune old versions

*muine-0.8.6 (14 Nov 2006)

  14 Nov 2006; Peter Johanson <latexer@gentoo.org> +muine-0.8.6.ebuild:
  Bump.

  24 Oct 2006; Peter Johanson <latexer@gentoo.org> muine-0.8.4.ebuild,
  muine-0.8.5.ebuild:
  Fix to use flac-1.1.2* as 1.1.3 changes API, etc. See bug #152007.

  02 Jul 2006; Peter Johanson <latexer@gentoo.org> muine-0.8.5.ebuild:
  Fix intltool problems, and add missing gstreamer dep. See bug #138687.

  01 Jul 2006; Peter Johanson <latexer@gentoo.org> files/digest-muine-0.8.5,
  Manifest:
  Fix a broken digest.

*muine-0.8.5 (01 Jul 2006)

  01 Jul 2006; Peter Johanson <latexer@gentoo.org> -muine-0.8.3.ebuild,
  -muine-0.8.3-r1.ebuild, +muine-0.8.5.ebuild: