@@ -3,14 +3,19 @@ MD5 af0ce1d3a863a698b77143472f381efc files/muine-0.8.7-flac.patch 2387
 RMD160 0f992e3a72436afe457d77d7157692e189ee457b files/muine-0.8.7-flac.patch 2387
 SHA256 d94cbf523c9e77bbfd4b7a8f5793a5a152a63c8352f62aedbfa8f882ae4b62c1 files/muine-0.8.7-flac.patch 2387
 DIST muine-0.8.7.tar.gz 765786 RMD160 ca16c833abe335f753f8c7fabb1d986f490dd05f SHA1 e1667d5a0fd4a79504307fb9261bb8b2a4dda87b SHA256 c3ce4665c156ec15d952fc18267d9b50c1445fbf8b26953ee9448c7a7db6a1e3
+DIST muine-0.8.8.tar.gz 833148 RMD160 56a1ab77fc4d99c254547efe29fd1f8cd214d7a2 SHA1 42ae6c1bce257268be808ad27adcab4110f2bef8 SHA256 92288652db03588b57fe87b089dfc2560702934b5c08cd80164b4cdade44798a
 EBUILD muine-0.8.7.ebuild 2387 RMD160 85b40ea125a68a4af067c4552d45ace5313387a8 SHA1 f93f6c06aa1f3188bacd5ff3ec24455398b2c3b5 SHA256 ae230c0958a0a6f8813c99370d8646fb7e34a903da0e192dc98bc7d846833d65
 MD5 7037e34dde85aa6b245506964046b6ef muine-0.8.7.ebuild 2387
 RMD160 85b40ea125a68a4af067c4552d45ace5313387a8 muine-0.8.7.ebuild 2387
 SHA256 ae230c0958a0a6f8813c99370d8646fb7e34a903da0e192dc98bc7d846833d65 muine-0.8.7.ebuild 2387
-MISC ChangeLog 6534 RMD160 d10e09b15973428e35c682639f24431df1ea2347 SHA1 7e95f58de96031b9e05a39615c308a59cbce0cc4 SHA256 07eadd70c32a79cc956b0c4d3ad2584e6c6b87a102efc1f3a92e36109b79920c
-MD5 c04a92fc7af7f62fe34dc63121f273ad ChangeLog 6534
-RMD160 d10e09b15973428e35c682639f24431df1ea2347 ChangeLog 6534
-SHA256 07eadd70c32a79cc956b0c4d3ad2584e6c6b87a102efc1f3a92e36109b79920c ChangeLog 6534
+EBUILD muine-0.8.8.ebuild 2012 RMD160 7ed41c6e7f3c9e51b79739c9e6f3f7d250633247 SHA1 3936c49e4304d2195800d500673bb22493a76aa7 SHA256 a2eeb139e6f4ad93e8020cd0dadd409f7d602f2da6943b251c07cb68fe465b8e
+MD5 632fb93411c459bfb624505f6e544eeb muine-0.8.8.ebuild 2012
+RMD160 7ed41c6e7f3c9e51b79739c9e6f3f7d250633247 muine-0.8.8.ebuild 2012
+SHA256 a2eeb139e6f4ad93e8020cd0dadd409f7d602f2da6943b251c07cb68fe465b8e muine-0.8.8.ebuild 2012
+MISC ChangeLog 6649 RMD160 2588e3e57cda2d2130c0c5529f876e2cc038c4f1 SHA1 8ab29148fa4dac0ba9ed31a6f9242ae146469951 SHA256 424f09520e4100249538b1b34dc45311398d7070be6639d961da11c50dc7b9cb
+MD5 07632a7ef5b3e9b2a5f927fea54e601d ChangeLog 6649
+RMD160 2588e3e57cda2d2130c0c5529f876e2cc038c4f1 ChangeLog 6649
+SHA256 424f09520e4100249538b1b34dc45311398d7070be6639d961da11c50dc7b9cb ChangeLog 6649
 MISC metadata.xml 245 RMD160 1616aa879e13e5d3f8ee6b140d342f83017a1b2b SHA1 784f47492a87ac299b76a07110f7a41a6cd2a0b7 SHA256 1b1fd4c1c14c9c902fcb27fc5a13587386c662b5b2da3b130b15fbac4afce1ce
 MD5 42dcaa983276bbd8e849c07f13677337 metadata.xml 245
 RMD160 1616aa879e13e5d3f8ee6b140d342f83017a1b2b metadata.xml 245
@@ -18,3 +23,6 @@ SHA256 1b1fd4c1c14c9c902fcb27fc5a13587386c662b5b2da3b130b15fbac4afce1ce metadata
 MD5 f857e8fa4d841cc097b7ebf230f6ee7c files/digest-muine-0.8.7 235
 RMD160 4ec6bab86cf8687434c548cd83ef65e581f39894 files/digest-muine-0.8.7 235
 SHA256 fa827b65f7c10227c526fc794531663c681311f0365edb53cf37eb4b0ad4e643 files/digest-muine-0.8.7 235
+MD5 063343fe104beb211a6a6de670ad7bb7 files/digest-muine-0.8.8 235
+RMD160 0c5f64c92b79f3f02f5fc2dbba4aa2e30fe6f84e files/digest-muine-0.8.8 235
+SHA256 eb3446ee613cadd31317555eda4814301a65ff2e7075f103f9121ab58f782701 files/digest-muine-0.8.8 235
