@@ -1,0 +1,3 @@
+MD5 0bf318424d35241525df701e107dd6b1 muine-0.8.8.tar.gz 833148
+RMD160 56a1ab77fc4d99c254547efe29fd1f8cd214d7a2 muine-0.8.8.tar.gz 833148
+SHA256 92288652db03588b57fe87b089dfc2560702934b5c08cd80164b4cdade44798a muine-0.8.8.tar.gz 833148
