@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/muine
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/muine/ChangeLog,v 1.42 2007/07/12 14:51:16 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/muine/ChangeLog,v 1.43 2007/10/22 17:52:19 drac Exp $
+
+*muine-0.8.8 (22 Oct 2007)
+
+  22 Oct 2007; Samuli Suominen <drac@gentoo.org> +muine-0.8.8.ebuild:
+  Version bump.
 
   12 Jul 2007; Samuli Suominen <drac@gentoo.org>
   +files/muine-0.8.7-flac.patch, muine-0.8.7.ebuild:
